# python-logfmter

./: .gitignore  .pre-commit-config.yaml  FUNDING.yml  HISTORY.md  README.md  flake.nix  pyproject.toml  pytest.ini  setup.cfg
requirements/: pre-commit.txt
src/logfmter/: __init__.py  formatter.py
tests/: test_formatter.py
